<resources>
    //****************************
    // General
    //****************************


    //Labels
    <string name="app_name">MinSM</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="resourcename_label">Resource Type</string>
    <string name="totalcount_label">Total Count</string>
    <string name="totalview_label">Total View</string>

    //Values
    <string name="content_value">[content]</string>
    <string name="resourcename_value">[resourcename]</string>
    <string name="totalcount_value">[totalcount]</string>
    <string name="totalview_value">[totalview]</string>


    //***************************
    //Preferences Strings
    //***************************
    //Labels
    <string name="preferences_title">Preferences</string>
    <string name="url_label">URL</string>
    <string name="port_label">Port</string>
    <string name="count_label">Count</string>
    <string name="user_label">User</string>
    <string name="pass_label">Pass</string>

    //Values
    <string name="url_value">[URL]</string>
    <string name="port_value">[Port]</string>
    <string name="count_value">[Count]</string>
    <string name="user_value">[User]</string>
    <string name="pass_value">[Pass]</string>

    //View Settings
    <string name="view_count_title">Incident Count</string>
    <string name="view_count_summary">Select the number of incidents showing in your home screen</string>
    <string name="view_assign_title">Assignment group</string>
    <string name="view_assign_summary">This option if selected will show incidents from your assignment group.</string>
    <string name="view_sort_title">Sort by</string>
    <string name="view_sort_summary">Select the sort type of incidents showing in your home screen</string>
    <string name="view_desc_asc_title">Ascending</string>
    <string name="view_desc_asc_summary">This option if selected will show incidents sorted by your preference in ascending order.</string>

    //Server Settings
    <string name="view_server_title">Server</string>
    <string name="view_server_summary">Please enter the IP to the HP Service Manager server</string>
    <string name="view_port_title">Port</string>
    <string name="view_port_summary">Please enter the port to the HP Service Manager server</string>

    //Offline Settings
    <string name="view_offline_title">Offline Data</string>
    <string name="view_offline_summary">This option if selected will automatically store incident data for offline use.</string>
    <string name="view_offline_now_title">Refresh Offline Data</string>
    <string name="view_offline_now_summary">Refresh incident data to offline storage now. You need to be logged on to use this feature</string>

    //***************************
    //Incident Strings
    //***************************
    //Labels
    <string name="incident_label">Incident</string>
    <string name="im_label">IM</string>
    <string name="title_label">Title</string>
    <string name="status_label">Status</string>
    <string name="description_label">Description</string>
    <string name="service_label">Service</string>
    <string name="openby_label">Opened By</string>
    <string name="journal_label">Journal Updates</string>aci_value
    <string name="aci_label">Affected CI</string>aci_value

    //Values
    <string name="incident_value">[Incident]</string>
    <string name="im_value">[IM]</string>
    <string name="title_value">[Title]</string>
    <string name="status_value">[Status]</string>
    <string name="description_value">[Description]</string>
    <string name="service_value">[Service]</string>
    <string name="openby_value">{Opened By]</string>
    <string name="journal_value">[Journal Updates]</string>
    <string name="aci_value">[Affected CI]</string>aci_value


    //Buttons
    <string name="resolve_incident">Resolve Incident</string>
    <string name="update_incident">Update Incident</string>


    //Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_user">Demo</string>
    <string name="navigation_drawer_email">demo@sykehuspartner.no</string>

    //***************************
    //Incident Update Strings
    //***************************
    //Labels
    <string name="incident_update_title">Update Incident</string>

    //***************************
    //Incident Resolve Strings
    //***************************
    //Labels
    <string name="incident_resolve_title">Resolve Incident</string>


    //***************************
    //Login Strings
    //***************************
    //Labels
    <string name="incident_login">Login</string>
    <string name="login_user_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_demo_label">Offline mode</string>


    //***************************
    //Solution Codes Array
    //***************************
    <string name="solution_prompt">Select solution code</string>
    <string-array name="solution_codes">
        <item>Solved by Workaround</item>
        <item>Automatically Closed</item>
        <item>Out of Scope</item>
        <item>Solved by User Instructions</item>
    </string-array>


    //***************************
    //Solution Codes Array
    //***************************
    <string name="update_prompt">Select solution code</string>
    <string-array name="update_codes">
        <item>Communication with customer</item>
        <item>Operator Update</item>
        <item>Communication with vendor</item>
        <item>Update from customer</item>
    </string-array>


    //***************************
    //Tab Headers
    //***************************
    <string name="tab_info_header">Info</string>
    <string name="tab_update_header">Update</string>
    <string name="tab_resolve_header">Resolve</string>

</resources>
