<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"
        android:key="incidentCount"
        android:summary="@string/view_count_summary"
        android:title="@string/view_count_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="assignment_group"
        android:summary="@string/view_assign_summary"
        android:title="@string/view_assign_title" />
    <ListPreference
        android:defaultValue="Incident number"
        android:entries="@array/sortByArray"
        android:entryValues="@array/sortByValues"
        android:key="sort_order"
        android:summary="@string/view_sort_summary"
        android:title="@string/view_sort_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dec_asc"
        android:summary="@string/view_desc_asc_summary"
        android:title="@string/view_desc_asc_title" />
</PreferenceScreen>