<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    //Title

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label" />

        <TextView
            android:id="@+id/title_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_value" />
    </LinearLayout>

    <View style="@style/Divider" />

    //Description

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <TextView
            android:id="@+id/description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_value" />
    </LinearLayout>

    <View style="@style/Divider" />
    //Contact

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/openby_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openby_label" />

        <TextView
            android:id="@+id/openby_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openby_value" />
    </LinearLayout>

    <View style="@style/Divider" />

    //Service

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/service_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_label" />

        <TextView
            android:id="@+id/service_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_value" />
    </LinearLayout>

    <View style="@style/Divider" />
    //Service

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/aci_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aci_label" />

        <TextView
            android:id="@+id/aci_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aci_value" />
    </LinearLayout>

    <View style="@style/Divider" />


    //Journal

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/journal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/journal_label" />

        <TextView
            android:id="@+id/journal_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/journal_value" />
    </LinearLayout>

</LinearLayout>